[tool.poetry]
name = "gtag"
version = "0.0.27"
description = "GUI toolkit for building beautiful applications for mobile, web, and desktop from a single python3 codebase"
authors = ["manatlan <manatlan@gmail.com>"]
readme = 'README.md'
license="Apache-2.0"
keywords=['gui', 'electron', "asyncio", "guy", "desktop", "web", "mobile"]
homepage = "https://github.com/manatlan/guy"
repository = "https://github.com/manatlan/guy"
documentation = "https://github.com/manatlan/guy"
classifiers = [
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.5"
guy = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
